Edited the Manifest
- Service was not being used

--- a/Knighted/AndroidManifest.xml
+++ b/Knighted/AndroidManifest.xml
@@ -27,7 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="us.the.mac.board.network.BTService"/>
+        <!-- <service android:name="us.the.mac.board.network.BTService"/> -->
     </application>
 
 </manifest>
